# alice-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  start.sh
concept/: README.md
defense/guardian/: guardian.py
defense/guardian/leak-detector/: Cargo.toml
defense/guardian/leak-detector/src/: main.rs
defense/persist/: Cargo.toml
defense/persist/src/: lib.rs  tests.rs
engine/: Cargo.toml
engine/design/: legacy-migration-plan.md  memory-db-schema.md
engine/dumps/: beat_prompt_input_v7.txt  beat_prompt_output_v7.txt
engine/ops/: download_page.html  engine.sh  guardian-report.txt  guardian.py  install.sh  release.sh  self-deploy.sh  setup_host.sh  updater.sh
engine/route-macro/src/: lib.rs
engine/src/: api.toml  lib.rs  logging.rs  main.rs  messages.rs  rpc.rs
engine/src/action/: action_output.rs  execute.rs  mod.rs
engine/src/analysis/: mod.rs
engine/src/api/: auth.rs  http_protocol.rs  mod.rs  routes.rs  state.rs  types.rs
engine/src/bindings/: db.rs  http.rs  i18n.rs  mod.rs
engine/src/chat/: mod.rs
engine/src/core/: instance.rs  memory.rs  mod.rs  signal.rs
engine/src/engine/: mod.rs
engine/src/hub/: config.rs  extension_impl.rs  hooks.rs  host.rs  mod.rs  proxy.rs  slave.rs  tunnel.rs
engine/src/inference/: beat.rs  capture.rs  compress.rs  mod.rs  output.rs
engine/src/legacy/: migrate.rs  mod.rs
engine/src/llm/: mod.rs  stream.rs
engine/src/model/: mod.rs
engine/src/persist/: api_config.rs  chat.rs  hooks.rs  instance.rs  memory.rs  mod.rs  settings.rs
engine/src/policy/: action_output.rs  api.toml  api_config.rs  engine.toml  engine_config.rs  env_config.rs  log_formats.rs  messages.rs  mod.rs
engine/src/prompt/: mod.rs  prompt_dump_test.rs
engine/src/service/: extension.rs  http_proxy.rs  mod.rs
engine/src/util/: mod.rs
engine/src/web/: mod.rs
engine/templates/: app_guide.txt  capture_system.txt  history_compress.txt  initial_history.txt  react_system.txt  react_user.txt  reserved_skill.txt  welcome_letter.txt
frontend/: Cargo.toml
frontend/public/: error-reporter.js  main.css
frontend/src/: api.rs  app.rs  lib.rs  main.rs
html-frontend/: backup.html  files.html  index.html  knowledge.html  login.html  setup.html
integration/: Cargo.toml  mock_llm.py
integration/playwright/: capture_async.spec.js  channel_rotation.spec.js  hello_world.spec.js  message_no_duplicate.spec.js  package-lock.json  package.json  playwright.config.js  settings_knowledge.spec.js
integration/playwright/test-results/: .last-run.json
integration/playwright/test-results/hello_world-Hello-World-—-full-end-to-end-with-browser/: error-context.md
integration/scripts/: capture_async.json  channel_rotation.json  hello_world.json  kill_during_action.json  message_no_duplicate.json  run_e2e.sh  run_kill_test.sh  settings_knowledge.json
integration/src/: lib.rs  mock_llm.rs
integration/tests/: api_episode3_memory_lifecycle.rs  api_hello_world.rs
integration/tests/_archived/: api_episode2_file_ops.rs  api_hello_world.rs
mad-hatter/: Cargo.toml
mad-hatter/mad-hatter/: Cargo.toml
mad-hatter/mad-hatter-macros/: Cargo.toml
mad-hatter/mad-hatter-macros/src/: gen.rs  lib.rs  llm.rs  parse.rs  tunnel.rs
mad-hatter/mad-hatter/examples/: bind_demo.rs  debug_parse.rs  demo.rs
mad-hatter/mad-hatter/src/: dao.rs  lib.rs  llm.rs  tunnel.rs
mad-hatter/mad-hatter/tests/: test_classified_docs.rs  test_flatten.rs  test_from_markdown.rs  test_infer.rs  test_resilience.rs  test_stream_infer.rs  test_stress.rs  test_to_markdown.rs  test_to_markdown_enum.rs  test_tunnel.rs
route-macro/: Cargo.toml
route-macro/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
scripts/: pre-deploy-check.sh  release-build.sh  self-deploy.sh
tests/: hub_e2e.sh  hub_hooks_test.sh
