[package]
name = "alice-engine"
version = "0.1.0"
edition = "2021"
description = "Alice Engine - Rust implementation. The soul container."

# @HUB - Alice Engine Rust
# Crate structure mirrors Java engine's package layout.
# Modules: core, action, llm, repo, shell, prompt, engine
#
# @TRACE lines (same IDs as Java version):
# [BEAT] - Heartbeat cycle
# [INFER] - LLM inference
# [ACTION] - Action execution
# [MSG] - Message I/O
# [MEMORY] - Memory read/write
# [SHELL] - Shell execution
# [INSTANCE] - Instance lifecycle
# [RESTART] - Restart mechanism
# [STREAM] - Streaming execution

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
route-macro = { path = "../route-macro" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
futures-util = "0.3"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "fs"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
mockall = "0.12"
