[package]
name = "alice-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
rusqlite = { version = "0.32", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
alice-rpc = { path = "../rpc", optional = true }
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "unix", "serde-transport-json"], optional = true }
tower-http = { version = "0.6", features = ["compression-gzip", "set-header"], optional = true }
tower = { version = "0.5", optional = true }
pulldown-cmark = "0.12"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "HtmlElement", "CssStyleDeclaration", "Document", "Window", "EventTarget", "Element"], optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen", "dep:gloo-timers", "dep:web-sys", "dep:js-sys"]
ssr = ["dep:sha2", "dep:hex", "dep:axum", "dep:tokio", "dep:leptos_axum", "dep:rusqlite", "dep:serde_json", "dep:alice-rpc", "dep:tarpc", "dep:tower-http", "dep:tower", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[[bin]]
name = "alice-frontend"
path = "src/main.rs"

[package.metadata.leptos]
output-name = "alice-frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "0.0.0.0:3000"
reload-port = 3001
assets-dir = "public"
# style-file = "style/main.css"  # disabled: lightningcss converts @media max-width to range syntax, breaking older Safari
bin-features = ["ssr"]
lib-features = ["hydrate"]
