[package]
name = "alice-integration"
version = "0.1.0"
edition = "2021"
description = "Integration tests: API layer → RPC → Engine end-to-end"

# No lib or bin — tests only
[lib]
name = "alice_integration"
path = "src/lib.rs"

[dependencies]
alice-engine = { path = "../engine" }
alice-rpc = { path = "../rpc" }
alice-frontend = { path = "../frontend", features = ["ssr"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"
serde_json = "1"
axum = "0.8"
tower = "0.5"
http-body-util = "0.1"
hyper = "1"
