[package]
name = "alice-rpc"
version = "0.1.0"
edition = "2021"
description = "Shared RPC interface between Alice engine and frontend"

[dependencies]
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "serde-transport-json", "unix"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["net"] }

