[package]
name = "mad-hatter"
version = "0.1.0"
edition = "2021"

[dependencies]
mad-hatter-macros = { path = "../mad-hatter-macros" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[[example]]
name = "demo"
path = "examples/demo.rs"
