[package]
name = "mad-hatter"
version = "0.1.0"
edition = "2021"

[dependencies]
mad-hatter-macros = { path = "../mad-hatter-macros" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
async-trait = "0.1"
diesel = { version = "2", features = ["sqlite", "r2d2"] }


[[example]]
name = "demo"
path = "examples/demo.rs"
